# smart_car_software_a01_a02_code

./: .gitignore  README.en.md  README.md  bags  start_kits.sh
a01_preprocess/a01_point_cloud_preprocess/: CMakeLists.txt  pass_through.cpp
a01_preprocess/plane_fitting/: CMakeLists.txt
code/a01_preprocess/a01_point_cloud_preprocess/: ramdom_sampling.cpp  voxel_grid_sampling.cpp
code/a01_preprocess/others/: hello.cpp  package.xml
code/a01_preprocess/plane_fitting/: line_ransac.cpp  ransac_plane.cpp  ransac_sphere.cpp
src/a01_image_process/: CMakeLists.txt  package.xml
src/a01_image_process/src/: blur.cpp  fast_feature_detector.cpp  gray.cpp  ros_blur.cpp  ros_fast_feature_detector.cpp  ros_gray.cpp
src/a01_preprocessing/: CMakeLists.txt  package.xml
src/a01_preprocessing/src/code/a01_point_cloud_preprocess/: statistics_through.cpp
src/a02_scout_car_task_1/: CMakeLists.txt  package.xml
src/a02_scout_car_task_1/launch/: start2.launch  start_in_car2.launch
src/a02_scout_car_task_1/src/: depth_image_viewer.cpp  distance_measurement.cpp  gen_pic_topic.cpp  image_viewer.cpp  imu_subscriber.cpp  std_to_pcl_view.cpp
src/a02_task1_scout_car/: CMakeLists.txt
src/a02_task1_scout_car/launch/: start_1.launch  start_in_car1.launch
src/a02_task1_scout_car/src/: depth_image_viewer.cpp  imu_subscriber.cpp  pcl_viewer.cpp
src/a02_task2_rht/: CMakeLists.txt
src/a02_task2_rht_show/: package.xml
src/a02_task2_rht_show_test/launch/: image_show.launch
src/a02_task3/: CMakeLists.txt  package.xml
src/a02_task3/launch/: gui.launch
src/a02_task3/msg/: car_info.msg
src/a02_task3/scripts/: server.py
src/a02_task3/scripts/templates/: index.html
src/a02_task3/src/: command_control.cpp  info_publisher.cpp  read_info.cpp
src/algorithm_set/: CMakeLists.txt  package.xml
src/algorithm_set/include/algorithm_set/: distance.h
src/algorithm_set/src/: distance.cpp
src/rht_show/: CMakeLists.txt
src/rht_show/src/: rht_show.cpp
src/test1/: package.xml
src/test1/src/: projection.cpp
